# discord-rpc-helper

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  release.yml  rust-clippy.yml  äuto-tag.yml
src/: config.rs  constants.rs  main.rs  spawner.rs  steam.rs
src/discord/: discord_presence.rs  discord_rpc.rs  mod.rs
src/steam/: cache.rs  mod.rs  scanner.rs
