[package]
name = "discord-rpc-helper"
description = "Automatically sets Discord activity based on running Proton games"
homepage = "https://github.com/kekonn/discord-rpc-helper"
repository = "https://github.com/kekonn/discord-rpc-helper"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["discord", "rpc", "steam", "proton"]
categories = ["games"]
version = "1.1.0"
edition = "2021"
authors = ["kekkon"]
include = [
    "**/*.rs",
    "**/*.md",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.26"
anyhow = "^1"
scraper = "^0.13"
reqwest = {version = "^0.11"}
tokio = {version = "1", features = ["signal", "fs", "sync", "macros", "rt-multi-thread", "io-util", "io-std"]}
serde = {version = "^1", features = ["default", "derive"]}
serde_json = "^1"
async-trait = "^0.1"
discord-rich-presence = "^0.2"
url = "^2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1