[package]
name = "discord-rpc-helper"
description = "Automatically sets Discord activity based on running Proton games"
homepage = "https://github.com/kekonn/discord-rpc-helper"
repository = "https://github.com/kekonn/discord-rpc-helper"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["discord", "rpc", "steam", "proton"]
categories = ["games"]
version = "1.2.3"
edition = "2021"
authors = ["kekkon"]
include = [
    "**/*.rs",
    "**/*.md",
    "Cargo.toml"
]

[package.metadata.binstall]

[dependencies]
sysinfo = "0.29"
anyhow = "1.0"
scraper = "0.18"
once_cell = "1.18"
reqwest_cookie_store = "0.6"
tokio = {version = "1", features = ["signal", "fs", "sync", "macros", "rt-multi-thread", "io-util", "io-std"]}
serde = {version = "^1", features = ["default", "derive"]}
serde_json = "^1"
async-trait = "^0.1"
url = "^2"
discord-sdk = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
html-escape = "0.2.13"

[dependencies.reqwest]
version = "0.11"
features = ["default", "gzip", "cookies"]


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.1"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = []
# Publish jobs to run in CI
pr-run-mode = "plan"
