[package]
name = "discord-rpc-helper"
description = "Automatically sets Discord activity based on running Proton games"
homepage = "https://github.com/kekonn/discord-rpc-helper"
repository = "https://github.com/kekonn/discord-rpc-helper"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["discord", "rpc", "steam", "proton"]
categories = ["games"]
version = "1.3.4"
edition = "2021"
authors = ["kekkon"]
include = ["**/*.rs", "**/*.md", "Cargo.toml"]

[package.metadata.binstall]

[dependencies]
sysinfo = "0.37"
anyhow = "1.0"
scraper = "0.24"
once_cell = "1"
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = [
    "signal",
    "fs",
    "sync",
    "macros",
    "rt-multi-thread",
    "io-util",
    "io-std",
] }
serde = { version = "^1", features = ["default", "derive"] }
serde_json = "^1"
async-trait = "^0.1"
url = "^2"
discord-sdk = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
html-escape = "0.2.13"

[dependencies.reqwest]
version = "0.12"
features = ["default", "gzip", "cookies"]


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
